- Swagger doc for courses controller done!
